<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="30dp"
            android:elevation="0dp"
            app:cardCornerRadius="50dp"
            >
            <ImageView
                android:id="@+id/user_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_photo_camera_24"
                android:background="@drawable/text_gradient_shade"
                />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_account_name"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignTop="@+id/user_image"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="18dp"
            android:layout_toEndOf="@+id/user_image"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColorHint="@color/text_horse_item"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_account_email"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_below="@+id/user_account_name"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_toEndOf="@+id/user_image"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColorHint="@color/text_horse_item"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:hint="@string/date_account"
            android:id="@+id/user_account_date"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_toEndOf="@+id/user_image"
            android:layout_below="@+id/user_account_email"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColorHint="@color/text_horse_item"
            />

        <ProgressBar
            android:id="@+id/progress_user_layout"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="12dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_account_privacy"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/privacy_account"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:paddingHorizontal="18dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_account_about"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/about_account"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:paddingHorizontal="18dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_account_setting"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/setting_account"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:paddingHorizontal="18dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_account_sign_out"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/sign_out"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:paddingHorizontal="18dp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>